2002-04-12	Chris Johns <ccj@acm.org>

	* doc/user/userext.t: Per PR138, updated the documentation to show
	how to obtain an extension table index. Also provided some extra
	background on the user extension API.

2002-04-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* io.t: Fix typo @sybsection.

2002-03-27	Eric Norum <eric.norum@usask.ca>

        * intr.t: Per PR165, now correctly states that passing a NULL 
	pointer for the return argument is an error.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-03-27	Eric Norum <eric.norum@usask.ca>

	* PR161
        * rtmon.t: Add rtems_ prefix to directives in the example.

2002-03-22      Chris Johns <ccj@acm.org>

	* io.t, conf.t: PR 160. Added the IO Manager's register and 
	unregister interface documentation.

2002-03-15	Eric Norum <eric.norum@usask.ca>

	* rtmon.t: Correct example and correctly used ensure not insure.

2002-01-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: include main.am, require automake-1.5.

2001-01-17	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Added rtems_header.html and rtems_footer.html.

2001-01-17	Joel Sherrill <joel@OARcorp.com>

	* timer.t: Added task-based timer information including the
	new directives rtems_timer_initiate(), rtems_timer_server_fire_after(),
	and rtems_timer_server_fire_when().

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.