@@ -1,3 +1,9 @@
+2002-06-28	Joel Sherrill <joel@OARcorp.com>
+
+	* userext.t: Per PR228, correct the prototype of the task create
+	user extension to indicate it returns a boolean and augment the
+	documentation to explain the purpose of the boolean return value.
+
 2002-04-12	Chris Johns <ccj@acm.org>
 
 	* doc/user/userext.t: Per PR138, updated the documentation to show
